--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "vue-scroll2",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple Vue.js smooth scroll plugin",
   "main": "index.js",
+  "scripts": {
+    "babel": "npx babel script.js --out-file index.js"
+  },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
     "vue": "2.5.0"
   },
   "keywords": [
