--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-scroll2",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A simple Vue.js smooth scroll plugin",
   "main": "index.js",
   "scripts": {
-    "babel": "npx babel script.js --out-file index.js"
+    "babel": "npx babel main.js --out-file index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ch3sh1r3Cat/vue-scroll2.git"
+    "url": "https://github.com/zecheshirecat/vue-scroll2.git"
   },
   "author": "cheshirecat <ca.leduc@me.com>",
   "license": "ISC"
